fix(Search): Use contains instead of regex
