# server/common/swagger/Api.yaml
@@ -43,9 +43,13 @@ definitions:
         type: string
         pattern: '^(\*|([0-9]|1[0-9]|2[0-9]|3[0-9]|4[0-9]|5[0-9])|\*\/([0-9]|1[0-9]|2[0-9]|3[0-9]|4[0-9]|5[0-9])) (\*|([0-9]|1[0-9]|2[0-3])|\*\/([0-9]|1[0-9]|2[0-3])) (\*|([1-9]|1[0-9]|2[0-9]|3[0-1])|\*\/([1-9]|1[0-9]|2[0-9]|3[0-1])) (\*|([1-9]|1[0-2])|\*\/([1-9]|1[0-2])) (\*|([0-6])|\*\/([0-6]))$'
         example: '0 */2 * * *'
-      bodyRegex:
-        type: string
-        example: '(condo|dishwasher)'
+      bodyMatch:
+        type: array
+        items:
+          type: string
+        example:
+          - condo
+          - diswasher
       key:
         type: string
         example: plateau
